replace list item margin with padding to avoid overflow

--- a/sass/list.scss
+++ b/sass/list.scss
@@ -9,6 +9,6 @@ ul {
 
   ol,
   ul {
-    @include ml(8);
+    @include pl(8);
   }
 }
